--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         tools:layout_editor_absoluteX="-90dp">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/load_button"
             android:backgroundTint="@color/purple_500"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,7 +23,35 @@
             android:layout_marginStart="101dp"
             android:layout_marginTop="16dp"
             android:minHeight="50dp"
-            android:text="@string/button1"
+            android:text="@string/button_login"
+            tools:layout_editor_absoluteX="158dp"
+            tools:layout_editor_absoluteY="331dp" />
+
+        <Button
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editTextTextPassword2"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="74dp"
+            android:backgroundTint="@color/purple_500"
+            android:minHeight="50dp"
+            android:text="@string/button_save"
+            tools:layout_editor_absoluteX="158dp"
+            tools:layout_editor_absoluteY="331dp" />
+
+        <Button
+            android:id="@+id/delete_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editTextTextPassword2"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="101dp"
+            android:layout_marginTop="131dp"
+            android:backgroundTint="@color/purple_500"
+            android:minHeight="50dp"
+            android:text="@string/button_delete"
             tools:layout_editor_absoluteX="158dp"
             tools:layout_editor_absoluteY="331dp" />
 
